# freeRTOS_study

./: .gitmodules  CMakeLists.txt  README.md
include/: FreeRTOSConfig.h
include/freertos_study/: freertos_study.h
src/: CMakeLists.txt  freertos.c  notification-1.c  queue10.c  queue11.c  queue12.c  timers13.c  timers14.c
